--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=budgetapi
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.generate-unique-name=false
+spring.jpa.hibernate.ddl-auto=validate
